fix: spacing on the left side of screen

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -209,6 +209,7 @@ html {
 
   .partnership-form-detail {
     width: 100%;
+    overflow: auto;
   }
 
   .partnership-form {
